# fiuba_distri_tp1

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose.yaml  pyproject.toml  run_client.sh  tp1.code-workspace
.data/: README.md  polars_queries.ipynb
cli/: main.py
cli/utils/: __init__.py  docker.py  middleware.py  packages.py  paths.py  services.py  template_parser.py  workers.py
client/: Dockerfile  pyproject.toml
client/src/: main.py
common/: pyproject.toml
common/src/: __init__.py  config.py  serde.py  utils.py
common/src/tcp/: __init__.py  _factory.py  server.py  sock.py
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose-dev.yaml.j2  docker-compose.yaml
docs/diagramas/: diagramas.drawio
docs/notas/: 2023-09-21-Note-20-13.xopp  2023-09-26-Note-21-06.xopp
middleware/: pyproject.toml
middleware/src/: main.py  middleware.py  middleware_type.py
scripts/: main.py  poetry_base.Dockerfile
scripts/utils/: docker.py  packages.py  paths.py  poetry.py
server/: Dockerfile  pyproject.toml
tp1/aed/: pyproject.toml
tp1/aed/src/: __init__.py  main.py
tp1/aed/src/aed/: aed.py  aed_factory.py  config.py  heartbeat_listener.py  leader_election.py
tp1/client/: pyproject.toml
tp1/client/src/: __init__.py  main.py
tp1/client/src/client/: _config.py  client.py  main.py  reader.py  state.py  utils.py
tp1/lib/: pyproject.toml
tp1/lib/src/: __init__.py  config.py  logs.py  paths.py  protocol.py  serde.py  signals.py  utils.py
tp1/lib/src/tcp/: __init__.py  _socket.py  errors.py  server.py  sock_server.py  socket.py
tp1/middleware/: Dockerfile  docker-compose.yml  pyproject.toml
tp1/middleware/src/: __init__.py  middleware_v2.py
tp1/middleware/src/middleware/: __init__.py  constants.py  main.py  message.py  middleware.py  middleware_type.py  producer_consumer.py  producer_suscriber.py  publisher.py  publisher_consumer.py  publisher_suscriber.py
tp1/server/: Dockerfile  pyproject.toml
tp1/server/src/: __init__.py  main.py
tp1/server/src/server/: main.py  server.py  state.py
tp1/worker/: Dockerfile  pyproject.toml
tp1/worker/src/: __init__.py  main.py
tp1/worker/src/worker/: __init__.py  _config.py  _utils.py  aggregate_by_route.py  base_filter.py  config.py  dist_calculator.py  fastest_by_route.py  filter.py  filter_by_price.py  filter_by_stops.py  general_avg_price.py  main.py  partial_route_agg.py  price_by_route.py  top_2_fastest_by_route.py  worker_factory.py  worker_type.py
worker/: Dockerfile  pyproject.toml
worker/src/: main.py
