[tool.poetry]
name = "fiuba-distri-tp1"
version = "0.0.1"
description = "TP1 de Sistemas Distribuidos I"
authors = ["taielc"]
readme = "README.md"
packages = [{ include = "cli", from = "." }]
include = ["docker-compose.yaml", { path = "docker" }, { path = "docs" }, ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
py-modules = []

[tool.poetry.scripts]
tp = "cli.main:tp1"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.7"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pylint = "^3.0.0"

[tool.black]
line-length = 80

[tool.pylint]
max-line-length = 80
disable = "C0103,C0114,C0115,C0116"
