[tool.poetry]
name = "client"
version = "0.0.1"
description = "Cliente para TP1"
authors = ["taielc"]
packages = [{ include = "src" }]

[tool.poetry.scripts]
client = "src.main:main"

[tool.poetry.dependencies]
python = ">=3.10"
common = { path = "../common", develop = true }


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.black]
line-length = 80
