[tool.poetry]
name = "middleware"
version = "0.0.1"
description = "Middlewaree para TP1"
authors = ["taielc"]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
lib = { path = "../lib", develop = true }
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pylint = "^3.0.0"

[tool.black]
line-length = 80

[tool.pylint]
max-line-length = 80
